# RNN

./: CMakeLists.txt  Makefile  RNN  createDataSet.cpp  createDataSet.sh  dataSet.csv  graph.py
include/: RNNTrainer.hpp  cellStructure.hpp  dataReader.hpp  matrix_maths.hpp
src/: RNNTrainer.cpp  cellStructure.cpp  dataReader.cpp  matrix_maths.cpp
